syntax = "proto3";

package emails;

service EmailsService {
  rpc SendLabReservationEmail(SendLabReservationEmailRequest) returns (SendEmailResponse);
  rpc SendSupportTicketsEmail(SendSupportTicketsEmailRequest) returns (SendEmailResponse);
  rpc SendLabEquipmentReservationCancellationEmail(SendLabEquipmentReservationCancellationEmailRequest) returns (SendEmailResponse);
  rpc SendPasswordRecoveryEmail(SendPasswordRecoveryEmailRequest) returns (SendEmailResponse);
  rpc SendLabReservationReminderEmail(SendLabReservationReminderEmailRequest) returns (SendEmailResponse);
  rpc SendPasswordRecoveryConfirmation(SendPasswordRecoveryConfirmationRequest) returns (SendEmailResponse);
  rpc SendInitialPasswordConfirmation(SendInitialPasswordConfirmationRequest) returns (SendEmailResponse);
  rpc SendPasswordChangeConfirmation(SendPasswordChangeConfirmationRequest) returns (SendEmailResponse);
}

message SendLabReservationEmailRequest {
  string to = 1;
  string companyName = 2;
  string logoUrl = 3;
  string userName = 4;
  string reservationDate = 5;
  repeated ReservationDetail details = 6;
  string primaryColor = 7;
  string subscriptionDetailId = 8;
}

message ReservationDetail {
  string labDescription = 1;
  string equipmentDescription = 2;
  string startTime = 3;
  string endTime = 4;
  string date = 5;
  ReservationMetadata metadata = 6;
}

message ReservationMetadata {
  string username = 1;
  string password = 2;
  string accessUrl = 3;
}

message SendEmailResponse {
  bool success = 1;
  string message = 2;
  string error = 3;
}

message SendSupportTicketsEmailRequest {
  string to = 1;
  string companyName = 2;
  string logoUrl = 3;
  string userName = 4;
  string ticketNumber = 5;
  string title = 6;
  string description = 7;
  string priority = 8;
  string statusCode = 9;
  string type = 10;
  string category = 11;
  string createdDate = 12;
  string primaryColor = 13;
}

message SendLabEquipmentReservationCancellationEmailRequest {
  string reservationLaboratoryEquipmentId = 1;
  EmailNotificationMetadata metadata = 2;
  string subscriptionDetailId = 3;
}

message EmailNotificationMetadata {
  string password = 1;
  string username = 2;
  string accessUrl = 3;
  EmailNotificationData emailNotificationData = 4;
}

message EmailNotificationData {
  string logoUrl = 1;
  string finalHour = 2;
  string companyName = 3;
  string initialHour = 4;
  string primaryColor = 5;
  string laboratoryName = 6;
  string subscriberName = 7;
  string reservationDate = 8;
  string subscriberEmail = 9;
}

message SendPasswordRecoveryEmailRequest {
  string email = 1;
  string username = 2;
  string fullName = 3;
  string pin = 4;
  string companyName = 5;
  string primaryColor = 6;
  string logoUrl = 7;
  optional string subscriptionDetailId = 8;
}

message SendLabReservationReminderEmailRequest {
  string to = 1;
  string companyName = 2;
  string logoUrl = 3;
  string userName = 4;
  int32 reminderMinutes = 5;
  string reservationDate = 6;
  string startTime = 7;
  string endTime = 8;
  string labDescription = 9;
  string equipmentDescription = 10;
  string primaryColor = 11;
  string subscriptionDetailId = 12;
}

message SendPasswordRecoveryConfirmationRequest {
  string email = 1;
  string username = 2;
  string fullName = 3;
  string companyName = 4;
  string primaryColor = 5;
  string logoUrl = 6;
  optional string subscriptionDetailId = 7;
}

message SendInitialPasswordConfirmationRequest {
  string email = 1;
  string username = 2;
  string fullName = 3;
  string companyName = 4;
  string primaryColor = 5;
  string logoUrl = 6;
  optional string subscriptionDetailId = 7;
}

message SendPasswordChangeConfirmationRequest {
  string email = 1;
  string username = 2;
  string fullName = 3;
  string companyName = 4;
  string primaryColor = 5;
  string logoUrl = 6;
  optional string subscriptionDetailId = 7;
}